--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Classroom_Management_System)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Classroom_Management_System main.cpp Metadata.cpp Metadata.h Physical_location.cpp Physical_location.h Time.cpp Time.h Date.cpp Date.h User.cpp User.h Record.cpp Record.h Student.cpp Student.h Staff.cpp Staff.h Equipments.cpp Equipments.h)
+add_executable(Classroom_Management_System main.cpp Metadata.cpp Metadata.h Physical_location.cpp Physical_location.h Time.cpp Time.h Date.cpp Date.h User.cpp User.h Record.cpp Record.h Student.cpp Student.h Staff.cpp Staff.h Equipments.cpp Equipments.h Admin.cpp Admin.h Room.cpp Room.h System_intializer.cpp System_intializer.h)
